--- a/semestral_llvm/Makefile
+++ b/semestral_llvm/Makefile
@@ -6,7 +6,7 @@ compile:
 	mkdir obj bin
 
 clean:
-	rm pjp output.o a.out 2>/dev/null \
+	rm pjp *.o *.out 2>/dev/null \
 	rm -r bin/ obj/ 2>/dev/null
 
 tests:
