--- a/semestral_llvm/Makefile
+++ b/semestral_llvm/Makefile
@@ -2,11 +2,11 @@ run:
 	./pjp
 
 compile:
-	g++ -o pjp *.cpp `llvm-config --libs core native engine interpreter --cxxflags --ldflags --system-libs --libs all`
+	g++ -o pjp src/*.cpp `llvm-config --libs core native engine interpreter --cxxflags --ldflags --system-libs --libs all`
 	mkdir obj bin
 
 clean:
-	rm pjp *.o *.out 2>/dev/null \
+	rm pjp 2>/dev/null \
 	rm -r bin/ obj/ 2>/dev/null
 
 tests:
